@@ -22,9 +22,9 @@ copyright = '2008-2010 Jesus Cea Avion'
 # The default replacements for |version| and |release|.
 #
 # The short X.Y version.
-version = '5.1.0'
+version = '5.1.1'
 # The full version, including alpha/beta/rc tags.
-release = '5.1.0'
+release = '5.1.1devel1'
 
 # There are two options for replacing |today|: either, you set today to some
 # non-false value, then it is used:
